# ArkDiscordChat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-publish.yml  release.yml  snapshot.yml  test-and-publish.yml
src/: ark.rs  discord.rs  main.rs  rcon_command.rs  start_error.rs  type_container.rs
