[package]
name = "arkdiscordchat"
version = "1.1.1"
authors = ["Rens Rikkerink <contact@ikkerens.com>"]
edition = "2018"

[dependencies]
envmnt = "0.8"
rercon = { git = "https://github.com/ikkerens/rercon" }
serenity = { git = "https://github.com/Lakelezz/serenity", branch = "await" }
regex = "1.2"
lazy_static = "1.3"
tokio = "0.2"
